--- a/html/genindex.html
+++ b/html/genindex.html
@@ -152,13 +152,31 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#B"><strong>B</strong></a>
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
  | <a href="#T"><strong>T</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.Bout.actual_winner">actual_winner() (elote.arenas.base.Bout method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.History.add_bout">add_bout() (elote.arenas.base.History method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -177,6 +195,16 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="competitors.html#elote.competitors.ensemble.BlendedCompetitor">BlendedCompetitor (class in elote.competitors.ensemble)</a>
+</li>
+      <li><a href="arenas.html#elote.arenas.base.Bout">Bout (class in elote.arenas.base)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.History.confusion_matrix">confusion_matrix() (elote.arenas.base.History method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -225,10 +253,56 @@
   </ul></td>
 </tr></table>
 
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.Bout.false_negative">false_negative() (elote.arenas.base.Bout method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.Bout.false_positive">false_positive() (elote.arenas.base.Bout method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="competitors.html#elote.competitors.glicko.GlickoCompetitor">GlickoCompetitor (class in elote.competitors.glicko)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.History">History (class in elote.arenas.base)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.Bout.predicted_loser">predicted_loser() (elote.arenas.base.Bout method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.Bout.predicted_winner">predicted_winner() (elote.arenas.base.Bout method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.History.random_search">random_search() (elote.arenas.base.History method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="competitors.html#elote.competitors.ecf.ECFCompetitor.rating">rating() (elote.competitors.ecf.ECFCompetitor property)</a>
+</li>
+      <li><a href="arenas.html#elote.arenas.base.History.report_results">report_results() (elote.arenas.base.History method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -248,6 +322,12 @@
         <li><a href="competitors.html#elote.competitors.glicko.GlickoCompetitor.tied">(elote.competitors.glicko.GlickoCompetitor method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="arenas.html#elote.arenas.base.Bout.true_negative">true_negative() (elote.arenas.base.Bout method)</a>
+</li>
+      <li><a href="arenas.html#elote.arenas.base.Bout.true_positive">true_positive() (elote.arenas.base.Bout method)</a>
+</li>
   </ul></td>
 </tr></table>
 
