--- a/html/_modules/elote/competitors/dwz.html
+++ b/html/_modules/elote/competitors/dwz.html
@@ -165,13 +165,21 @@
 <span class="sd">        :param initial_rating: the initial rating to use for a new competitor who has no history.  Default 400</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_count</span> <span class="o">=</span> <span class="mi">0</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">=</span> <span class="n">initial_rating</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span> <span class="o">=</span> <span class="n">initial_rating</span>
 
     <span class="k">def</span> <span class="fm">__repr__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="s1">&#39;&lt;DWZCompetitor: </span><span class="si">%s</span><span class="s1">&gt;&#39;</span> <span class="o">%</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="fm">__hash__</span><span class="p">())</span>
 
     <span class="k">def</span> <span class="fm">__str__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="s1">&#39;&lt;DWZCompetitor&gt;&#39;</span>
+
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">rating</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span>
+
+    <span class="nd">@rating</span><span class="o">.</span><span class="n">setter</span>
+    <span class="k">def</span> <span class="nf">rating</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">value</span><span class="p">):</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span> <span class="o">=</span> <span class="n">value</span>
 
 <div class="viewcode-block" id="DWZCompetitor.export_state"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.dwz.DWZCompetitor.export_state">[docs]</a>    <span class="k">def</span> <span class="nf">export_state</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -180,11 +188,12 @@
 <span class="sd">        :return: dictionary of kwargs and class-args to re-instantiate this object</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="p">{</span>
-            <span class="s2">&quot;initial_rating&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">rating</span><span class="p">,</span>
+            <span class="s2">&quot;initial_rating&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span><span class="p">,</span>
             <span class="s2">&quot;class_vars&quot;</span><span class="p">:</span> <span class="p">{</span>
                 <span class="s2">&quot;_J&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_J</span>
             <span class="p">}</span>
         <span class="p">}</span></div>
+
 
 <div class="viewcode-block" id="DWZCompetitor.expected_score"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.dwz.DWZCompetitor.expected_score">[docs]</a>    <span class="k">def</span> <span class="nf">expected_score</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">:</span> <span class="n">BaseCompetitor</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -196,15 +205,15 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">verify_competitor_types</span><span class="p">(</span><span class="n">competitor</span><span class="p">)</span>
 
-        <span class="k">return</span> <span class="mi">1</span> <span class="o">/</span> <span class="p">(</span><span class="mi">1</span> <span class="o">+</span> <span class="mi">10</span> <span class="o">**</span> <span class="p">((</span><span class="n">competitor</span><span class="o">.</span><span class="n">rating</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">rating</span><span class="p">)</span> <span class="o">/</span> <span class="mi">400</span> <span class="p">))</span></div>
+        <span class="k">return</span> <span class="mi">1</span> <span class="o">/</span> <span class="p">(</span><span class="mi">1</span> <span class="o">+</span> <span class="mi">10</span> <span class="o">**</span> <span class="p">((</span><span class="n">competitor</span><span class="o">.</span><span class="n">rating</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span><span class="p">)</span> <span class="o">/</span> <span class="mi">400</span><span class="p">))</span></div>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">_E</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="n">E0</span> <span class="o">=</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">/</span> <span class="mi">1000</span><span class="p">)</span> <span class="o">**</span> <span class="mi">4</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_J</span>
-        <span class="n">a</span> <span class="o">=</span> <span class="nb">max</span><span class="p">([</span><span class="mf">0.5</span><span class="p">,</span> <span class="nb">min</span><span class="p">([</span><span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">/</span> <span class="mi">2000</span><span class="p">,</span> <span class="mi">1</span><span class="p">])])</span>
+        <span class="n">E0</span> <span class="o">=</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_rating</span> <span class="o">/</span> <span class="mi">1000</span><span class="p">)</span> <span class="o">**</span> <span class="mi">4</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_J</span>
+        <span class="n">a</span> <span class="o">=</span> <span class="nb">max</span><span class="p">([</span><span class="mf">0.5</span><span class="p">,</span> <span class="nb">min</span><span class="p">([</span><span class="bp">self</span><span class="o">.</span><span class="n">_rating</span> <span class="o">/</span> <span class="mi">2000</span><span class="p">,</span> <span class="mi">1</span><span class="p">])])</span>
 
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">&lt;</span> <span class="mi">1300</span><span class="p">:</span>
-            <span class="n">B</span> <span class="o">=</span> <span class="n">math</span><span class="o">.</span><span class="n">exp</span><span class="p">((</span><span class="mi">1300</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">rating</span><span class="p">)</span> <span class="o">/</span> <span class="mi">150</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span> <span class="o">&lt;</span> <span class="mi">1300</span><span class="p">:</span>
+            <span class="n">B</span> <span class="o">=</span> <span class="n">math</span><span class="o">.</span><span class="n">exp</span><span class="p">((</span><span class="mi">1300</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span><span class="p">)</span> <span class="o">/</span> <span class="mi">150</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">B</span> <span class="o">=</span> <span class="mi">0</span>
 
@@ -215,7 +224,7 @@
             <span class="k">return</span> <span class="nb">max</span><span class="p">([</span><span class="mi">5</span><span class="p">,</span> <span class="nb">min</span><span class="p">([</span><span class="n">E</span><span class="p">,</span> <span class="mi">150</span><span class="p">])])</span>
 
     <span class="k">def</span> <span class="nf">_new_rating</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">,</span> <span class="n">W_a</span><span class="p">):</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">+</span> <span class="p">(</span><span class="mi">800</span> <span class="o">/</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_E</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_count</span><span class="p">))</span> <span class="o">*</span> <span class="p">(</span><span class="n">W_a</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">expected_score</span><span class="p">(</span><span class="n">competitor</span><span class="p">))</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span> <span class="o">+</span> <span class="p">(</span><span class="mi">800</span> <span class="o">/</span> <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_E</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_count</span><span class="p">))</span> <span class="o">*</span> <span class="p">(</span><span class="n">W_a</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">expected_score</span><span class="p">(</span><span class="n">competitor</span><span class="p">))</span>
 
 <div class="viewcode-block" id="DWZCompetitor.beat"><a class="viewcode-back" href="../../../competitors.html#elote.competitors.dwz.DWZCompetitor.beat">[docs]</a>    <span class="k">def</span> <span class="nf">beat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">:</span> <span class="n">BaseCompetitor</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -230,7 +239,7 @@
         <span class="n">self_rating</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_new_rating</span><span class="p">(</span><span class="n">competitor</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
         <span class="n">competitor_rating</span> <span class="o">=</span> <span class="n">competitor</span><span class="o">.</span><span class="n">_new_rating</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">=</span> <span class="n">self_rating</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span> <span class="o">=</span> <span class="n">self_rating</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_count</span> <span class="o">+=</span> <span class="mi">1</span>
 
         <span class="n">competitor</span><span class="o">.</span><span class="n">rating</span> <span class="o">=</span> <span class="n">competitor_rating</span>
@@ -248,7 +257,7 @@
         <span class="n">self_rating</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_new_rating</span><span class="p">(</span><span class="n">competitor</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">)</span>
         <span class="n">competitor_rating</span> <span class="o">=</span> <span class="n">competitor</span><span class="o">.</span><span class="n">_new_rating</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">)</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">=</span> <span class="n">self_rating</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_rating</span> <span class="o">=</span> <span class="n">self_rating</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_count</span> <span class="o">+=</span> <span class="mi">1</span>
 
         <span class="n">competitor</span><span class="o">.</span><span class="n">rating</span> <span class="o">=</span> <span class="n">competitor_rating</span>
