--- a/html/_modules/index.html
+++ b/html/_modules/index.html
@@ -146,7 +146,8 @@
            <div itemprop="articleBody">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="elote/competitors/dwz.html">elote.competitors.dwz</a></li>
+<ul><li><a href="elote/arenas/base.html">elote.arenas.base</a></li>
+<li><a href="elote/competitors/dwz.html">elote.competitors.dwz</a></li>
 <li><a href="elote/competitors/ecf.html">elote.competitors.ecf</a></li>
 <li><a href="elote/competitors/elo.html">elote.competitors.elo</a></li>
 <li><a href="elote/competitors/ensemble.html">elote.competitors.ensemble</a></li>
