--- a/html/_modules/elote/competitors/elo.html
+++ b/html/_modules/elote/competitors/elo.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>elote.competitors.elo &mdash; elote 0.0.5 documentation</title>
+  <title>elote.competitors.elo &mdash; elote 0.1.0 documentation</title>
   
 
   
@@ -157,8 +157,7 @@
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">initial_rating</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mi">400</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Overview</span>
-<span class="sd">        ========</span>
+<span class="sd">        **Overview**</span>
 
 <span class="sd">        Elo rating is a rating system based on pairwise comparisons. Ratings are given to competitors based on their</span>
 <span class="sd">        comparisons (bouts) with peers, in which they can win, lose or tie. The change in a players rating is scaled by</span>
@@ -166,8 +165,7 @@
 
 <span class="sd">        [1] Elo, Arpad (1978). The Rating of Chessplayers, Past and Present. Arco. ISBN 0-668-04721-6.</span>
 
-<span class="sd">        Basic Usage</span>
-<span class="sd">        -----------</span>
+<span class="sd">        **Basic Usage**</span>
 
 <span class="sd">        .. code-block:: python</span>
 
@@ -178,8 +176,7 @@
 <span class="sd">            print(&#39;probability of better beating good: %5.2f%%&#39; % (better.expected_score(good) * 100, ))</span>
 
 
-<span class="sd">        Class Variables</span>
-<span class="sd">        ---------------</span>
+<span class="sd">        **Class Variables**</span>
 
 <span class="sd">        Class variables are configured for all competitors in a population, not on a per-competitor basis. See the</span>
 <span class="sd">        documentation on ``Arenas`` to see how to set these safely.</span>
@@ -187,8 +184,7 @@
 <span class="sd">         * _base_rating: defaults to 400.</span>
 <span class="sd">         * _k_factor: tunes the speed of response to new information, higher is faster response. Default=32</span>
 
-<span class="sd">        Configuration Options</span>
-<span class="sd">        ---------------------</span>
+<span class="sd">        **Configuration Options**</span>
 
 <span class="sd">        :param initial_rating: the initial rating to use for a new competitor who has no history.  Default 400</span>
 <span class="sd">        :type initial_rating: int</span>
