deploy: 147ba4c321a4718f6d680ad3a6e88b301d61d1c1

--- a/html/_modules/index.html
+++ b/html/_modules/index.html
@@ -102,12 +102,10 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="elote/arenas/base.html">elote.arenas.base</a></li>
-<li><a href="elote/competitors/base.html">elote.competitors.base</a></li>
+<ul><li><a href="elote/competitors/base.html">elote.competitors.base</a></li>
 <li><a href="elote/competitors/dwz.html">elote.competitors.dwz</a></li>
 <li><a href="elote/competitors/ecf.html">elote.competitors.ecf</a></li>
 <li><a href="elote/competitors/elo.html">elote.competitors.elo</a></li>
-<li><a href="elote/competitors/ensemble.html">elote.competitors.ensemble</a></li>
 <li><a href="elote/competitors/glicko.html">elote.competitors.glicko</a></li>
 </ul>
 
