--- a/genindex.html
+++ b/genindex.html
@@ -14,7 +14,7 @@
     </script>
     
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; elote 1.0.0 documentation</title>
+  <title>Index &mdash; elote 1.1.0 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
       <link rel="stylesheet" type="text/css" href="_static/dark_mode_css/general.css?v=c0a7eb24" />
@@ -23,7 +23,7 @@
   
       <script src="_static/jquery.js?v=5d32c60e"></script>
       <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=af2ce170"></script>
+      <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=def9ab29"></script>
       <script src="_static/doctools.js?v=888ff710"></script>
       <script src="_static/sphinx_highlight.js?v=4825356b"></script>
       <script src="_static/dark_mode_js/default_dark.js?v=fd565c74"></script>
@@ -436,6 +436,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/competitors.html#elote.competitors.glicko.GlickoCompetitor.update_competitor_rating">update_competitor_rating() (elote.competitors.glicko.GlickoCompetitor method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/competitors.html#elote.competitors.glicko.GlickoCompetitor.update_rd_for_inactivity">update_rd_for_inactivity() (elote.competitors.glicko.GlickoCompetitor method)</a>
 </li>
   </ul></td>
 </tr></table>
