--- a/_modules/elote/competitors/base.html
+++ b/_modules/elote/competitors/base.html
@@ -191,7 +191,7 @@
 
     <span class="n">_minimum_rating</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="nb">float</span><span class="p">]</span> <span class="o">=</span> <span class="mi">100</span>
 
-    <span class="k">def</span><span class="w"> </span><span class="nf">__init_subclass__</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">__init_subclass__</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Register subclasses in the competitor registry.</span>
 
 <span class="sd">        This method is called automatically when a subclass is created.</span>
@@ -395,14 +395,13 @@
         <span class="k">pass</span>
 
 <div class="viewcode-block" id="BaseCompetitor.import_state"><a class="viewcode-back" href="../../../api/competitors.html#elote.competitors.base.BaseCompetitor.import_state">[docs]</a>    <span class="k">def</span><span class="w"> </span><span class="nf">import_state</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">state</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Update this competitor&#39;s state from a previously exported state.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Import the competitor&#39;s state from a dictionary.</span>
 
-<span class="sd">        This method updates the current competitor instance with the state from</span>
-<span class="sd">        a previously exported state dictionary.</span>
+<span class="sd">        This method updates the competitor&#39;s state based on the provided dictionary,</span>
+<span class="sd">        including parameters and current state variables.</span>
 
 <span class="sd">        Args:</span>
-<span class="sd">            state (dict): A dictionary containing the state of a competitor,</span>
-<span class="sd">                         as returned by export_state().</span>
+<span class="sd">            state (dict): A dictionary containing the state of a competitor.</span>
 
 <span class="sd">        Raises:</span>
 <span class="sd">            InvalidStateException: If the state dictionary is invalid or incompatible.</span>
@@ -422,10 +421,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_import_current_state</span><span class="p">(</span><span class="n">state</span><span class="p">[</span><span class="s2">&quot;state&quot;</span><span class="p">])</span></div>
 
     <span class="k">def</span><span class="w"> </span><span class="nf">_validate_state_dict</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">state</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Validate a state dictionary.</span>
-
-<span class="sd">        This method checks that a state dictionary has all required fields and</span>
-<span class="sd">        that they have the correct types.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Validate the structure and content of a state dictionary.</span>
 
 <span class="sd">        Args:</span>
 <span class="sd">            state (dict): A state dictionary to validate.</span>
@@ -467,7 +463,7 @@
 
     <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">_import_current_state</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">state</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Import current state variables from a state dictionary.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Import the current state variables from a dictionary.</span>
 
 <span class="sd">        This method should be implemented by subclasses to import current state</span>
 <span class="sd">        variables from a state dictionary.</span>
@@ -551,8 +547,9 @@
 
         <span class="c1"># Create a custom JSON encoder to handle non-serializable objects</span>
         <span class="k">class</span><span class="w"> </span><span class="nc">CompetitorEncoder</span><span class="p">(</span><span class="n">json</span><span class="o">.</span><span class="n">JSONEncoder</span><span class="p">):</span>
-            <span class="k">def</span><span class="w"> </span><span class="nf">default</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">obj</span><span class="p">):</span>
+            <span class="k">def</span><span class="w"> </span><span class="nf">default</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">obj</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Any</span><span class="p">:</span>
                 <span class="c1"># Handle types that aren&#39;t JSON serializable</span>
+                <span class="c1"># For example, convert datetime objects to ISO format string</span>
                 <span class="k">try</span><span class="p">:</span>
                     <span class="c1"># Try to convert to a simple type</span>
                     <span class="k">if</span> <span class="nb">hasattr</span><span class="p">(</span><span class="n">obj</span><span class="p">,</span> <span class="s2">&quot;__dict__&quot;</span><span class="p">):</span>
@@ -585,10 +582,7 @@
         <span class="k">return</span> <span class="bp">cls</span><span class="o">.</span><span class="n">from_state</span><span class="p">(</span><span class="n">state</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="BaseCompetitor.verify_competitor_types"><a class="viewcode-back" href="../../../api/competitors.html#elote.competitors.base.BaseCompetitor.verify_competitor_types">[docs]</a>    <span class="k">def</span><span class="w"> </span><span class="nf">verify_competitor_types</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">competitor</span><span class="p">:</span> <span class="s2">&quot;BaseCompetitor&quot;</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Verify that the given competitor is of the same type as this one.</span>
-
-<span class="sd">        This method ensures that operations between competitors are only performed</span>
-<span class="sd">        when they use the same rating system.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Verify that the competitor types match.</span>
 
 <span class="sd">        Args:</span>
 <span class="sd">            competitor (BaseCompetitor): The competitor to verify.</span>
@@ -682,7 +676,7 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">&gt;=</span> <span class="n">other</span><span class="o">.</span><span class="n">rating</span>
 
 <div class="viewcode-block" id="BaseCompetitor.configure_class"><a class="viewcode-back" href="../../../api/competitors.html#elote.competitors.base.BaseCompetitor.configure_class">[docs]</a>    <span class="nd">@classmethod</span>
-    <span class="k">def</span><span class="w"> </span><span class="nf">configure_class</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">configure_class</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Configure class-level parameters for this rating system.</span>
 
 <span class="sd">        This method allows setting class-level parameters that affect all</span>
@@ -700,7 +694,7 @@
             <span class="k">else</span><span class="p">:</span>
                 <span class="k">raise</span> <span class="n">InvalidParameterException</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Unknown class parameter: </span><span class="si">{</span><span class="n">key</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="BaseCompetitor.configure"><a class="viewcode-back" href="../../../api/competitors.html#elote.competitors.base.BaseCompetitor.configure">[docs]</a>    <span class="k">def</span><span class="w"> </span><span class="nf">configure</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+<div class="viewcode-block" id="BaseCompetitor.configure"><a class="viewcode-back" href="../../../api/competitors.html#elote.competitors.base.BaseCompetitor.configure">[docs]</a>    <span class="k">def</span><span class="w"> </span><span class="nf">configure</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Configure instance-level parameters for this competitor.</span>
 
 <span class="sd">        This method allows setting instance-level parameters that affect only</span>
@@ -718,13 +712,16 @@
             <span class="k">else</span><span class="p">:</span>
                 <span class="k">raise</span> <span class="n">InvalidParameterException</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Unknown instance parameter: </span><span class="si">{</span><span class="n">key</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="BaseCompetitor.reset"><a class="viewcode-back" href="../../../api/competitors.html#elote.competitors.base.BaseCompetitor.reset">[docs]</a>    <span class="k">def</span><span class="w"> </span><span class="nf">reset</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Reset this competitor to its initial state.</span>
+<div class="viewcode-block" id="BaseCompetitor.reset"><a class="viewcode-back" href="../../../api/competitors.html#elote.competitors.base.BaseCompetitor.reset">[docs]</a>    <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractmethod</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">reset</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Reset the competitor&#39;s state to its initial configuration.</span>
 
-<span class="sd">        This method resets the competitor&#39;s rating and any other state to the</span>
-<span class="sd">        values it had when it was first created.</span>
+<span class="sd">        This method should revert any changes made through updates (beat, lost_to, tied)</span>
+<span class="sd">        and re-import the initial parameters and state.</span>
+<span class="sd">        Note: Actual implementation might be needed depending on how initial state is stored.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">rating</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_minimum_rating</span></div></div>
+        <span class="c1"># TODO: Implement actual reset logic if needed, possibly by restoring from initial state</span>
+        <span class="k">pass</span></div></div>
 </pre></div>
 
            </div>
